fix extra white space in mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,12 @@ html {
       font-size: 75%; } }
   @media only screen and (max-width: 75em) {
     html {
-      font-size: 56.25%; } }
+      font-size: 56.25%;
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden; } }
   @media only screen and (max-width: 56.25em) {
     html {
       font-size: 50%; } }
@@ -49,12 +54,20 @@ html {
 
 body {
   box-sizing: border-box; }
+  @media only screen and (max-width: 75em) {
+    body {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden; } }
 
 .container {
   margin: 0 auto;
   max-width: 114rem; }
   @media only screen and (max-width: 37.5em) {
     .container {
+      margin: 0 auto;
       max-width: 60rem; } }
 
 ::selection {
@@ -1002,8 +1015,7 @@ body {
   .hero__heading {
     position: relative;
     top: 12.5rem;
-    left: 15rem;
-    width: 35%; }
+    left: 15rem; }
     @media only screen and (max-width: 56.25em) {
       .hero__heading {
         top: 6rem;
