--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -16,6 +16,12 @@ html {
 
   @include respond(tab-land) {
     font-size: 56.25%;
+
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
   }
 
   @include respond(tab-port) {
@@ -29,6 +35,14 @@ html {
 
 body {
   box-sizing: border-box;
+
+  @include respond(tab-land) {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  }
 }
 
 .container {
@@ -36,6 +50,7 @@ body {
   max-width: $container-width;
 
   @include respond(phone) {
+    margin: 0 auto;
     max-width: 60rem;
   }
 }
