--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -15,7 +15,7 @@
     position: relative;
     top: 12.5rem;
     left: 15rem;
-    width: 35%;
+    // width: 35%;
 
     @include respond(tab-port) {
       top: 6rem;
